# MRC-Library

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
MRC_gui/: MRC_gui.pro  MRC_gui.pro.user.22  MRC_gui.pro.user.4.8-pre1  mrc_gui.cpp  mrc_gui.h  text.txt
docs/: Doxyfile  README.md  classPSDTab__inherit__graph.dot  classRxxTab-members.html  classSoC.html  classSoCTab-members.html  classSoCTab__inherit__graph.dot  classmrc__gui__coll__graph.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  hierarchy.html  index.html  inherit_graph_1.dot  mrc_8hpp_source.html  mrc__gui_8h_source.html  soctab_8h_source.html
docs/html/: MRC_8hpp_source.html  annotated.html  classPSDTab-members.html  classPSDTab.html  classPSDTab__coll__graph.map  classPSDTab__inherit__graph.md5  classRxxTab.html  classRxxTab__coll__graph.dot  classRxxTab__coll__graph.md5  classRxxTab__inherit__graph.map  classSoC-members.html  classSoC.html  classSoCTab.html  classSoCTab__coll__graph.map  classSoCTab__inherit__graph.md5  classes.html  classmrc__gui-members.html  classmrc__gui.html  classmrc__gui__coll__graph.map  classmrc__gui__coll__graph.md5  dir_000001_000002.html  dir_11bc0974ce736ce9a6fadebbeb7a8314.html  files.html  functions.html  (+32 more)
gui/: MRC_gui.pro  MRC_gui.pro.user.f83e21d  main.cpp  mrc_gui.cpp  mrc_gui.h  mrc_gui.ui  psdtab.cpp  psdtab.h  rxxtab.cpp  rxxtab.h  soctab.cpp  soctab.h
python/: MRC_Cisoides.ipynb
src/: CMakeLists.txt  MRC.cpp  MRC.hpp  main  main.cpp  main.txt  main1.cpp  man.txt  mrc.hpp  opt.cpp  soctab.h
src/gui/: MRC_gui.pro  mrc_gui.cpp  mrc_gui.h  psdtab.cpp  psdtab.h  rxxtab.h  soctab.cpp  soctab.h
src/mrc/: CMakeLists.txt  main.cpp  mrc.hpp
(+35 files in other folders)
